# FITexcel

./: CMakeLists.txt  CPos.cpp  CPos.hpp  CSpreadsheet.cpp  CSpreadsheet.hpp  CellValue.cpp  CellValue.hpp  HashForPair.hpp  PostfixExpressionBuilder.cpp  PostfixExpressionBuilder.hpp  README.md  all_in_one.cpp  constantexpressions.hpp  make_all_in_one.sh  stackoperators_custom.cpp  stackoperators_custom.hpp  test.cpp
